started frequency counts

--- a/messy-petfinder-analysis.ipynb
+++ b/messy-petfinder-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "entertaining-public",
+   "id": "treated-honor",
    "metadata": {},
    "source": [
     "# (Messy) Petfinder Analysis"
@@ -10,11 +10,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "skilled-wedding",
+   "execution_count": 2,
+   "id": "social-choice",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "considerable-latter",
+   "metadata": {},
+   "source": [
+    "## Project Details\n",
+    "* **Problem**: I plan to look at a snapshot of adoptable dogs across the United States (as posted on [Petfinder.com](https://www.petfinder.com)) to determine the predominant reported breeds of dogs within the shelter and rescue systems. In particular, I want to look at this distribution state-by-state.\n",
+    "* **Questions**:\n",
+    "    - For each state, what is the most populous reported breed found in shelters?\n",
+    "    - What is the current average length of stay (LOS) for each reported breed?\n",
+    "    - For each US geographical region, what are the top 10 reported breeds?\n",
+    "* **Justification**: Examining which reported dog breeds are most often ending up homeless and offered for adoption in local shelters/rescues may help to answer questions about breed popularity and dog ownership culture in the United States (and whether there are any region-specific trends). It may also help to answer questions about how meaningful a breed identity actually is in the context of animal rescue. [This professional study](https://pubmed.ncbi.nlm.nih.gov/27008213/) determined that breed labels in dogs can influence their perceived adoptability and LOS. Hopefully, this analysis will provide some insight into how dog breed identity in shelter/rescue systems differs by region. The results could perhaps lead to further study or reinforce preexisting conclusions.\n",
+    "* **Datasets**: [allDogDescriptions.csv](https://github.com/the-pudding/data/tree/master/dog-shelters), a dataset of all adoptable dogs from petfinder.com on September 20th, 2019.\n",
+    "* **Ethical Concerns/Considerations**:\n",
+    "    - The results may cause people to draw false conclusions about why certain breeds often end up in shelters and rescues.\n",
+    "    - The results risk reinforcing biases associated with various dog breeds.\n",
+    "    - The results may influence rescue/shelter intake depending on the dog's perceived adoptability."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "pressed-monkey",
+   "metadata": {},
+   "source": [
+    "The first task is to simply read in the data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "several-robertson",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>org_id</th>\n",
+       "      <th>url</th>\n",
+       "      <th>type.x</th>\n",
+       "      <th>species</th>\n",
+       "      <th>breed_primary</th>\n",
+       "      <th>breed_secondary</th>\n",
+       "      <th>breed_mixed</th>\n",
+       "      <th>breed_unknown</th>\n",
+       "      <th>color_primary</th>\n",
+       "      <th>...</th>\n",
+       "      <th>status</th>\n",
+       "      <th>posted</th>\n",
+       "      <th>contact_city</th>\n",
+       "      <th>contact_state</th>\n",
+       "      <th>contact_zip</th>\n",
+       "      <th>contact_country</th>\n",
+       "      <th>stateQ</th>\n",
+       "      <th>accessed</th>\n",
+       "      <th>type.y</th>\n",
+       "      <th>description</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>46042150</td>\n",
+       "      <td>NV163</td>\n",
+       "      <td>https://www.petfinder.com/dog/harley-46042150/...</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>American Staffordshire Terrier</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>White / Cream</td>\n",
+       "      <td>...</td>\n",
+       "      <td>adoptable</td>\n",
+       "      <td>2019-09-20T16:37:59+0000</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89147</td>\n",
+       "      <td>US</td>\n",
+       "      <td>89009</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Harley is not sure how he wound up at shelter ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>46042002</td>\n",
+       "      <td>NV163</td>\n",
+       "      <td>https://www.petfinder.com/dog/biggie-46042002/...</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Pit Bull Terrier</td>\n",
+       "      <td>Mixed Breed</td>\n",
+       "      <td>True</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brown / Chocolate</td>\n",
+       "      <td>...</td>\n",
+       "      <td>adoptable</td>\n",
+       "      <td>2019-09-20T16:24:57+0000</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89147</td>\n",
+       "      <td>US</td>\n",
+       "      <td>89009</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>6 year old Biggie has lost his home and really...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>46040898</td>\n",
+       "      <td>NV99</td>\n",
+       "      <td>https://www.petfinder.com/dog/ziggy-46040898/n...</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Shepherd</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>Brindle</td>\n",
+       "      <td>...</td>\n",
+       "      <td>adoptable</td>\n",
+       "      <td>2019-09-20T14:10:11+0000</td>\n",
+       "      <td>Mesquite</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89027</td>\n",
+       "      <td>US</td>\n",
+       "      <td>89009</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Approx 2 years old.\\n Did I catch your eye? I ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>46039877</td>\n",
+       "      <td>NV202</td>\n",
+       "      <td>https://www.petfinder.com/dog/gypsy-46039877/n...</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>German Shepherd Dog</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>adoptable</td>\n",
+       "      <td>2019-09-20T10:08:22+0000</td>\n",
+       "      <td>Pahrump</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89048</td>\n",
+       "      <td>US</td>\n",
+       "      <td>89009</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>46039306</td>\n",
+       "      <td>NV184</td>\n",
+       "      <td>https://www.petfinder.com/dog/theo-46039306/nv...</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Dachshund</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>False</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>...</td>\n",
+       "      <td>adoptable</td>\n",
+       "      <td>2019-09-20T06:48:30+0000</td>\n",
+       "      <td>Henderson</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89052</td>\n",
+       "      <td>US</td>\n",
+       "      <td>89009</td>\n",
+       "      <td>2019-09-20</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>Theo is a friendly dachshund mix who gets alon...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 35 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         id org_id                                                url type.x  \\\n",
+       "0  46042150  NV163  https://www.petfinder.com/dog/harley-46042150/...    Dog   \n",
+       "1  46042002  NV163  https://www.petfinder.com/dog/biggie-46042002/...    Dog   \n",
+       "2  46040898   NV99  https://www.petfinder.com/dog/ziggy-46040898/n...    Dog   \n",
+       "3  46039877  NV202  https://www.petfinder.com/dog/gypsy-46039877/n...    Dog   \n",
+       "4  46039306  NV184  https://www.petfinder.com/dog/theo-46039306/nv...    Dog   \n",
+       "\n",
+       "  species                   breed_primary breed_secondary  breed_mixed  \\\n",
+       "0     Dog  American Staffordshire Terrier     Mixed Breed         True   \n",
+       "1     Dog                Pit Bull Terrier     Mixed Breed         True   \n",
+       "2     Dog                        Shepherd             NaN        False   \n",
+       "3     Dog             German Shepherd Dog             NaN        False   \n",
+       "4     Dog                       Dachshund             NaN        False   \n",
+       "\n",
+       "   breed_unknown      color_primary  ...     status                    posted  \\\n",
+       "0          False      White / Cream  ...  adoptable  2019-09-20T16:37:59+0000   \n",
+       "1          False  Brown / Chocolate  ...  adoptable  2019-09-20T16:24:57+0000   \n",
+       "2          False            Brindle  ...  adoptable  2019-09-20T14:10:11+0000   \n",
+       "3          False                NaN  ...  adoptable  2019-09-20T10:08:22+0000   \n",
+       "4          False                NaN  ...  adoptable  2019-09-20T06:48:30+0000   \n",
+       "\n",
+       "  contact_city contact_state contact_zip contact_country  stateQ    accessed  \\\n",
+       "0    Las Vegas            NV       89147              US   89009  2019-09-20   \n",
+       "1    Las Vegas            NV       89147              US   89009  2019-09-20   \n",
+       "2     Mesquite            NV       89027              US   89009  2019-09-20   \n",
+       "3      Pahrump            NV       89048              US   89009  2019-09-20   \n",
+       "4    Henderson            NV       89052              US   89009  2019-09-20   \n",
+       "\n",
+       "   type.y                                        description  \n",
+       "0     Dog  Harley is not sure how he wound up at shelter ...  \n",
+       "1     Dog  6 year old Biggie has lost his home and really...  \n",
+       "2     Dog  Approx 2 years old.\\n Did I catch your eye? I ...  \n",
+       "3     Dog                                                NaN  \n",
+       "4     Dog  Theo is a friendly dachshund mix who gets alon...  \n",
+       "\n",
+       "[5 rows x 35 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"data/allDogDescriptions.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "demonstrated-compilation",
+   "metadata": {},
+   "source": [
+    "I start off by getting the overall breed frequencies:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "collected-bikini",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "OVERALL FREQUENCIES FOR PRIMARY LISTED BREED:\n",
+      "Pit Bull Terrier                7890\n",
+      "Labrador Retriever              7198\n",
+      "Chihuahua                       3766\n",
+      "Mixed Breed                     3242\n",
+      "Terrier                         2641\n",
+      "                                ... \n",
+      "Bouvier des Flandres               1\n",
+      "Belgian Shepherd / Laekenois       1\n",
+      "Kai Dog                            1\n",
+      "Skye Terrier                       1\n",
+      "Field Spaniel                      1\n",
+      "Name: breed_primary, Length: 216, dtype: int64\n",
+      "\n",
+      "\n",
+      "OVERALL FREQUENCIES FOR SECONDARY LISTED BREED:\n",
+      "Mixed Breed                    4348\n",
+      "Labrador Retriever             2194\n",
+      "Pit Bull Terrier               1365\n",
+      "Terrier                        1195\n",
+      "Hound                          1143\n",
+      "                               ... \n",
+      "Wirehaired Pointing Griffon       1\n",
+      "Afghan Hound                      1\n",
+      "English Foxhound                  1\n",
+      "Standard Schnauzer                1\n",
+      "Beauceron                         1\n",
+      "Name: breed_secondary, Length: 190, dtype: int64\n",
+      "\n",
+      "\n",
+      "NUMBER OF UNIQUE DOG BREEDS:  223\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"OVERALL FREQUENCIES FOR PRIMARY LISTED BREED:\")\n",
+    "print(df['breed_primary'].value_counts())\n",
+    "print(\"\\n\\nOVERALL FREQUENCIES FOR SECONDARY LISTED BREED:\")\n",
+    "print(df['breed_secondary'].value_counts())\n",
+    "uniq_breeds = pd.concat([df['breed_primary'], df['breed_secondary']]).drop_duplicates()\n",
+    "print(\"\\n\\nNUMBER OF UNIQUE DOG BREEDS: \", uniq_breeds.size)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "related-sound",
+   "metadata": {},
+   "source": [
+    "The most common dog listed as the primary breed is the Pit Bull Terrior, closely followed by the Labrador Retriever and then by the Chihuahua. The most common secondary breed is simply \"Mixed Breed\", followed again by the lab and the pit bull. In total, there are 223 unique breeds posted on Petfinder."
+   ]
   }
  ],
  "metadata": {
